--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,12 @@ debug = true
 opt-level = 3
 
 [dependencies]
-esp-alloc = "0.7"
-esp-backtrace = { version = "0.15", features = ["esp32c6", "panic-handler", "exception-handler", "println"] }
+esp-alloc = "0.9"
+esp-backtrace = { version = "0.18", features = ["esp32c6", "panic-handler", "println"] }
+esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c6"] }
 esp-hal = { version = "1.0.0-beta.0", features = ["esp32c6", "unstable"] }
-esp-println = { version = "0.13", default-features = false, features = ["esp32c6", "critical-section", "colors", "jtag-serial"] }
-esp-wifi = { version = "0.13", features = ["builtin-scheduler", "esp-alloc", "esp32c6", "wifi", "smoltcp"] }
+esp-println = { version = "0.16", default-features = false, features = ["esp32c6", "critical-section", "colors", "jtag-serial"] }
+esp-radio = { version = "0.17", features = ["esp32c6", "wifi", "smoltcp", "unstable"] }
+esp-rtos = { version = "0.2", features = ["esp32c6", "esp-radio"] }
 httparse = { version = "1.8", default-features = false }
 smoltcp = { version = "0.12", default-features = false, features = ["proto-ipv4", "proto-dhcpv4", "socket-udp", "socket-tcp", "socket-dhcpv4"] }
